--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -255,7 +255,7 @@ padding: 1rem;
     align-items:center ;
     margin-top: 3rem;
     background-image: url('/src/assets/flores.jpg');
-    background-position: center;
+    background-position:center;
     background-size: cover;
 }
 .mapa{
@@ -282,7 +282,11 @@ padding: 1rem;
     cursor: pointer;
     opacity: 0.8;
 }
-
+.seccion-contacto-mapa p{
+    color: #2e2e2c;
+    font-size: 1rem;
+    
+}
 /*? --------------------------------------FOOTER-------------------------------------------*/
 
 .footer-var{
